# hardenedbsd-ports-graphics

./: .gitignore  Makefile
Mk/: bsd.port.mk  bsd.sanity.mk  bsd.xorg.mk
Mk/Uses/: compiler.mk
audio/soundtouch/: Makefile
devel/: Makefile
devel/clinfo/: Makefile  distinfo
devel/clpeak/: Makefile  pkg-plist
devel/git/: Makefile
devel/libclc/: Makefile  distinfo  pkg-plist
devel/libdevq/: Makefile  distinfo
devel/libdevq/files/: patch-src_freebsd_device.c  patch-tools_lsdri_lsdri.c
devel/libepoll-shim/: Makefile  pkg-descr
devel/llvm38/: Makefile
devel/llvm38/files/: clang-patch-fformat_extensions.diff
devel/llvm39/: Makefile  distinfo  pkg-plist
devel/ocl-icd/: Makefile
devel/pocl/: Makefile  distinfo  pkg-descr  pkg-message  pkg-plist
devel/pocl/files/: patch-CMakeLists.txt  patch-Makefile.am  patch-configure.ac  patch-lib_CL_devices_cpuinfo.c  patch-pocl.icd.in
devel/qt4/: Makefile.sqldrivers
devel/roc/: Makefile  distinfo  pkg-descr  pkg-plist
devel/roc/files/: patch-CMakeLists.txt  patch-include_hsakmttypes.h  patch-include_linux_kfd__ioctl.h  patch-src_fmm.c  patch-src_fmm.h  patch-src_libhsakmt.h  patch-src_topology.c
editors/vim/: Makefile
emulators/linux-c6/: Makefile
emulators/virtualbox-ose-additions/: Makefile  pkg-plist
emulators/virtualbox-ose/files/: patch-src-VBox-Additions-x11-vboxmouse-Makefile.kmk
graphics/: Makefile
graphics/ImageMagick/: Makefile
graphics/ImageMagick7/: Makefile
graphics/cairo/: Makefile  pkg-plist
graphics/dri/: Makefile  pkg-plist
graphics/gbm/: Makefile
graphics/inkscape/: Makefile
graphics/libEGL/: Makefile
graphics/libGL/: Makefile  Makefile.common  Makefile.targets  bsd.mesalib.mk  distinfo  pkg-plist
graphics/libGL/files/: configure.ac  configure.ac-mako  patch-configure  patch-src__gallium__auxiliary__util__u_network.c  patch-src__gallium__state_trackers__clover__core__error.hpp  patch-src__gallium__state_trackers__clover__llvm_invocation.cpp  patch-src__loader__Makefile.am  patch-src__loader__Makefile.in  patch-src__loader__loader.c  patch-src__mesa__drivers__common__meta_tex_subimage.c
graphics/libdrm/: Makefile  distinfo  pkg-plist
graphics/libdrm/files/: configure.ac  extra-xf86drm.c  extra-xf86drmMode.c  patch-Makefile.in  patch-amdgpu_amdgpu__cs.c  patch-amdgpu_amdgpu__vamgr.c  patch-config.h.in  (+2 more)
graphics/libglapi/: Makefile
graphics/libglesv2/: Makefile
graphics/libosmesa/: Makefile  pkg-plist
graphics/mesa-demos/: Makefile
graphics/piglit/: Makefile  pkg-plist
graphics/waffle/: Makefile
graphics/wayland/: Makefile  distinfo  pkg-plist
graphics/wayland-protocols/: Makefile  distinfo  pkg-plist
lang/: Makefile
lang/beignet/: Makefile  distinfo  pkg-descr  pkg-plist
lang/clinfo/: Makefile  distinfo
lang/clover/: Makefile  pkg-descr  pkg-plist
lang/gcc5-devel/: Makefile
lang/gcc6-devel/: Makefile
lang/gcc7-devel/: Makefile
lang/hip/: Makefile  distinfo  pkg-descr  pkg-plist
lang/ocl-icd/: Makefile  distinfo  pkg-plist
mail/thunderbird/: Makefile
math/: Makefile
math/clblas/: Makefile  distinfo  pkg-plist
math/clfft/: Makefile  distinfo  pkg-plist
math/clrng/: Makefile  distinfo
math/fftw3/: Makefile
multimedia/mpv/: Makefile
net-im/pidgin/: Makefile
net/opensips/: Makefile
ports-mgmt/pkg/: distinfo
sysutils/amtc/: Makefile
sysutils/osquery/: Makefile
sysutils/xen-tools/: Makefile
wayland/: Makefile
wayland/libepoll-shim/: Makefile  distinfo  pkg-plist
wayland/libgudev/: Makefile  libgudev-230_1.txz  pkg-plist
wayland/libinput/: Makefile
wayland/libkbdev/: Makefile
wayland/libudev-devd/: Makefile  pkg-plist
wayland/libwacom/: Makefile  pkg-plist
wayland/sway/: Makefile  pkg-plist
wayland/wayland/: Makefile
wayland/wayland-protocols/: Makefile
wayland/weston/: Makefile  pkg-plist
wayland/wlc/: Makefile  Makefile-notyet  pkg-plist
www/firefox/: Makefile
www/firefox-esr/: Makefile
www/seamonkey/: Makefile
www/webkit-gtk3/: Makefile
x11/: Makefile
x11-drivers/: Makefile
x11-drivers/xf86-input-egalax/: Makefile
x11-drivers/xf86-input-evdev/: Makefile
x11-drivers/xf86-input-joystick/: Makefile
x11-drivers/xf86-input-keyboard/: Makefile
x11-drivers/xf86-input-libinput/: Makefile  distinfo  pkg-descr  pkg-plist
x11-drivers/xf86-input-mouse/: Makefile
x11-drivers/xf86-input-synaptics/: Makefile
x11-drivers/xf86-input-wacom/: Makefile
x11-drivers/xf86-video-amdgpu/: Makefile  distinfo  pkg-descr  pkg-plist
x11-drivers/xf86-video-ati/: Makefile  distinfo
x11-drivers/xf86-video-ati-ums/: Makefile
x11-drivers/xf86-video-chips/: Makefile
x11-drivers/xf86-video-cirrus/: Makefile
x11-drivers/xf86-video-dummy/: Makefile
x11-drivers/xf86-video-fbdev/: Makefile
x11-drivers/xf86-video-glint/: Makefile
x11-drivers/xf86-video-i740/: Makefile
x11-drivers/xf86-video-intel/: Makefile  distinfo
x11-drivers/xf86-video-mach64/: Makefile
x11-drivers/xf86-video-mga/: Makefile
x11-drivers/xf86-video-nouveau/: Makefile  distinfo  pkg-descr  pkg-plist
x11-drivers/xf86-video-nv/: Makefile
x11-drivers/xf86-video-openchrome/: Makefile
x11-drivers/xf86-video-r128/: Makefile
x11-drivers/xf86-video-rendition/: Makefile
x11-drivers/xf86-video-savage/: Makefile
x11-drivers/xf86-video-scfb/: Makefile
x11-drivers/xf86-video-siliconmotion/: Makefile
x11-drivers/xf86-video-sis/: Makefile
x11-drivers/xf86-video-sunffb/: Makefile
x11-drivers/xf86-video-tdfx/: Makefile
x11-drivers/xf86-video-trident/: Makefile
x11-drivers/xf86-video-tseng/: Makefile
x11-drivers/xf86-video-vmware/: Makefile
x11-drivers/xorg-drivers/: Makefile
x11-fonts/libXfont/: Makefile
x11-servers/xorg-nestserver/: Makefile  distinfo
x11-servers/xorg-server/: Makefile  distinfo  pkg-plist
x11-servers/xorg-vfbserver/: Makefile  distinfo
x11-toolkits/gtk30/: Makefile  pkg-plist
x11/libgudev/: Makefile  pkg-descr
x11/libinput/: Makefile  distinfo  pkg-plist
x11/libwacom/: Makefile  pkg-descr
x11/libxkbcommon/: Makefile  distinfo
x11/wayland/: Makefile  distinfo
(+72 files in other folders)
